some java script code update.

--- a/java_script_tutorial/html.html
+++ b/java_script_tutorial/html.html
@@ -28,7 +28,7 @@
 <body>
     <h1> Hello Java Script Tutorial</h1>
     <div id="firstcontainer" class="container"> 
-        <button id="click">Click me</button>
+        <button id="click" onclick="clicked()">Click me</button>
         <p>This is simple line.</p>
     </div>
     <div class="container">
